--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+#cmake
 CMakeCache.txt
 CMakeFiles
 CMakeScripts
@@ -7,3 +8,15 @@ cmake_install.cmake
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
+
+#c++
+*.a
+*.o
+
+#CLion
+*.xml
+*.iml
+*.cbp
+
+#Linux
+*.swp
